# rosetta-db

./: README.md
cpp/: .clang-format  .clang-tidy  CMakeLists.txt  CMakePresets.json
cpp/src/: database.cpp
d/: dub.json
d/source/: app.d
kotlin/: settings.gradle.kts
kotlin/app/: build.gradle.kts
kotlin/app/src/main/kotlin/rosetta/db/: App.kt
kotlin/app/src/main/resources/: log4j2.xml
kotlin/app/src/test/kotlin/rosetta/db/: AppTest.kt
